--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adibakshi28.github.io/Electronic_Shop/",
+  "homepage": "https://adibakshi28.github.io/Electronic_Shop-React.js/",
   "name": "ElectornicShop",
   "version": "0.1.0",
   "private": true,
